cairo: use GOOD instead of BEST as the default cairo filter for scaling

The quality is good enough and the performance is much better.

https://bugs.freedesktop.org/show_bug.cgi?id=103136